--- a/index.html
+++ b/index.html
@@ -2,64 +2,72 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <title>GrandRP Finder</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GrandRP Finder | Live Status</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
-        body { background-color: #0d1117; color: #c9d1d9; }
-        .card { background-color: #161b22; border: 1px solid #30363d; transition: 0.2s; }
-        .card:hover { border-color: #2ea043; }
+        body { 
+            background-color: #0b0e14; 
+            color: #e2e8f0; 
+            font-family: 'Inter', sans-serif;
+            background-image: radial-gradient(circle at top right, #1a202c 0%, #0b0e14 40%);
+            min-height: 100vh;
+        }
+        .glass {
+            background: rgba(22, 27, 34, 0.7);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.05);
+        }
+        .player-card {
+            background: rgba(30, 41, 59, 0.4);
+            border: 1px solid rgba(255, 255, 255, 0.03);
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+        .player-card:hover {
+            background: rgba(30, 41, 59, 0.8);
+            border-color: #10b981;
+            transform: translateY(-3px);
+            box-shadow: 0 10px 20px -10px rgba(16, 185, 129, 0.3);
+        }
+        .search-input:focus {
+            box-shadow: 0 0 0 2px rgba(16, 185, 129, 0.2);
+        }
+        /* Custom Scrollbar */
+        ::-webkit-scrollbar { width: 8px; }
+        ::-webkit-scrollbar-track { background: #0b0e14; }
+        ::-webkit-scrollbar-thumb { background: #2d3748; border-radius: 10px; }
+        ::-webkit-scrollbar-thumb:hover { background: #4a5568; }
     </style>
 </head>
-<body class="p-6">
-    <div class="max-w-6xl mx-auto">
-        <h1 class="text-2xl font-bold mb-6 flex items-center">
-            <span class="w-1 h-8 bg-green-500 mr-3"></span> GrandRP Finder
-        </h1>
-        
-        <div class="flex gap-4 mb-8">
-            <input type="text" id="search" placeholder="Szukaj ID lub Nicku..." 
-                class="bg-[#0d1117] border border-[#30363d] p-3 rounded-lg w-full md:w-80 focus:outline-none focus:border-green-500">
-            <div class="bg-[#161b22] p-3 rounded-lg border border-[#30363d]">
-                Online: <span id="count" class="text-green-500 font-bold">0</span>
+<body class="antialiased">
+
+    <div class="max-w-7xl mx-auto px-4 py-12">
+        <header class="flex flex-col md:flex-row md:items-center justify-between gap-6 mb-12">
+            <div>
+                <h1 class="text-4xl font-extrabold text-white tracking-tight mb-2">
+                    GrandRP <span class="text-emerald-500">Finder</span>
+                </h1>
+                <p class="text-slate-400 font-medium">Monitoring graczy w czasie rzeczywistym</p>
             </div>
-        </div>
-
-        <div id="list" class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-4">
-            </div>
-    </div>
-
-    <script>
-        const proxy = "https://corsproxy.io/?";
-        const url = "https://servers-frontend.fivem.net/api/servers/single/8rml8v";
-        let players = [];
-
-        async function load() {
-            try {
-                const r = await fetch(proxy + encodeURIComponent(url));
-                const d = await r.json();
-                players = d.Data.players || [];
-                render(players);
-            } catch (e) { console.error("Błąd pobierania danych."); }
-        }
-
-        function render(arr) {
-            document.getElementById('count').innerText = arr.length;
-            document.getElementById('list').innerHTML = arr.map(p => `
-                <div class="card p-4 rounded-lg flex justify-between items-center">
-                    <span class="text-green-500 font-bold text-lg">${p.id}</span>
-                    <span class="truncate ml-3 text-sm font-medium text-gray-300">${p.name}</span>
+            
+            <div class="glass px-6 py-4 rounded-2xl flex items-center gap-8">
+                <div class="flex flex-col">
+                    <span class="text-xs uppercase tracking-widest text-slate-500 font-bold">Status</span>
+                    <span id="status" class="text-emerald-400 font-semibold flex items-center gap-2">
+                        <span class="relative flex h-2 w-2">
+                            <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-emerald-400 opacity-75"></span>
+                            <span class="relative inline-flex rounded-full h-2 w-2 bg-emerald-500"></span>
+                        </span>
+                        Online
+                    </span>
                 </div>
-            `).join('');
-        }
+                <div class="w-px h-8 bg-slate-700"></div>
+                <div class="flex flex-col">
+                    <span class="text-xs uppercase tracking-widest text-slate-500 font-bold">Graczy</span>
+                    <span id="count" class="text-white text-xl font-bold">0</span>
+                </div>
+            </div>
+        </header>
 
-        document.getElementById('search').oninput = (e) => {
-            const val = e.target.value.toLowerCase();
-            const filtered = players.filter(p => p.name.toLowerCase().includes(val) || p.id.toString().includes(val));
-            render(filtered);
-        };
-
-        load();
-        setInterval(load, 15000); // Odświeżaj co 15 sekund
-    </script>
-</body>
-</html>
+        <div class="
