--- a/index.html
+++ b/index.html
@@ -7,67 +7,36 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <style>
-        body { 
-            background-color: #0b0e14; 
-            color: #e2e8f0; 
-            font-family: 'Inter', sans-serif;
-            background-image: radial-gradient(circle at top right, #1a202c 0%, #0b0e14 40%);
-            min-height: 100vh;
-        }
-        .glass {
-            background: rgba(22, 27, 34, 0.7);
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.05);
-        }
-        .player-card {
-            background: rgba(30, 41, 59, 0.4);
-            border: 1px solid rgba(255, 255, 255, 0.03);
-            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-        }
-        .player-card:hover {
-            background: rgba(30, 41, 59, 0.8);
-            border-color: #10b981;
-            transform: translateY(-3px);
-            box-shadow: 0 10px 20px -10px rgba(16, 185, 129, 0.3);
-        }
-        .search-input:focus {
-            box-shadow: 0 0 0 2px rgba(16, 185, 129, 0.2);
-        }
-        /* Custom Scrollbar */
-        ::-webkit-scrollbar { width: 8px; }
-        ::-webkit-scrollbar-track { background: #0b0e14; }
-        ::-webkit-scrollbar-thumb { background: #2d3748; border-radius: 10px; }
-        ::-webkit-scrollbar-thumb:hover { background: #4a5568; }
+        body { background-color: #0b0e14; color: #e2e8f0; font-family: 'Inter', sans-serif; min-height: 100vh; }
+        .glass { background: rgba(22, 27, 34, 0.7); backdrop-filter: blur(10px); border: 1px solid rgba(255, 255, 255, 0.05); }
+        .player-card { background: rgba(30, 41, 59, 0.4); border: 1px solid rgba(255, 255, 255, 0.03); transition: all 0.2s ease; }
+        .player-card:hover { background: rgba(30, 41, 59, 0.8); border-color: #10b981; transform: translateY(-2px); }
     </style>
 </head>
-<body class="antialiased">
-
-    <div class="max-w-7xl mx-auto px-4 py-12">
-        <header class="flex flex-col md:flex-row md:items-center justify-between gap-6 mb-12">
+<body class="p-4 md:p-12">
+    <div class="max-w-7xl mx-auto">
+        <header class="flex flex-col md:flex-row justify-between items-start md:items-center gap-6 mb-12">
             <div>
-                <h1 class="text-4xl font-extrabold text-white tracking-tight mb-2">
-                    GrandRP <span class="text-emerald-500">Finder</span>
-                </h1>
-                <p class="text-slate-400 font-medium">Monitoring graczy w czasie rzeczywistym</p>
+                <h1 class="text-4xl font-black text-white tracking-tight">GrandRP <span class="text-emerald-500">Finder</span></h1>
+                <p class="text-slate-400 mt-1">Monitoring obywateli wyspy w czasie rzeczywistym</p>
             </div>
-            
-            <div class="glass px-6 py-4 rounded-2xl flex items-center gap-8">
+            <div class="glass px-6 py-4 rounded-2xl flex gap-8">
                 <div class="flex flex-col">
-                    <span class="text-xs uppercase tracking-widest text-slate-500 font-bold">Status</span>
-                    <span id="status" class="text-emerald-400 font-semibold flex items-center gap-2">
-                        <span class="relative flex h-2 w-2">
-                            <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-emerald-400 opacity-75"></span>
-                            <span class="relative inline-flex rounded-full h-2 w-2 bg-emerald-500"></span>
-                        </span>
-                        Online
-                    </span>
+                    <span class="text-[10px] uppercase tracking-widest text-slate-500 font-bold">Status</span>
+                    <span id="status" class="text-emerald-400 font-bold flex items-center gap-2">Online</span>
                 </div>
-                <div class="w-px h-8 bg-slate-700"></div>
-                <div class="flex flex-col">
-                    <span class="text-xs uppercase tracking-widest text-slate-500 font-bold">Graczy</span>
+                <div class="flex flex-col border-l border-slate-700 pl-8">
+                    <span class="text-[10px] uppercase tracking-widest text-slate-500 font-bold">Graczy</span>
                     <span id="count" class="text-white text-xl font-bold">0</span>
                 </div>
             </div>
         </header>
 
-        <div class="
+        <div class="max-w-md mb-12">
+            <input type="text" id="search" placeholder="Szukaj ID lub nicku..." 
+                class="w-full bg-slate-900/50 border border-slate-700 text-white rounded-xl py-4 px-6 focus:outline-none focus:border-emerald-500 transition-all">
+        </div>
+
+        <div id="player-list" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 xl:grid-cols-5 gap-4">
+            <div class="col-span-full text-center py-20 text-slate-500 italic">Inicjowanie połączenia z wyspą...</div>
+        </div>
