--- a/index.html
+++ b/index.html
@@ -3,104 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GrandRP Finder | Instant</title>
+    <title>Monitor Graczy GrandRP</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;800&display=swap" rel="stylesheet">
     <style>
-        body { background-color: #05070a; color: #fafafa; font-family: 'Rajdhani', sans-serif; min-height: 100vh; overflow-y: scroll; }
-        .orange-glow { text-shadow: 0 0 15px rgba(249, 115, 22, 0.6); }
-        .player-card { background: #0f1218; border-left: 4px solid #f97316; transition: 0.1s; }
-        .player-card:hover { background: #1a1e26; border-left-width: 8px; }
-        /* Animacja szkieletu (Skeleton Load) */
-        .skeleton { background: linear-gradient(90deg, #0f1218 25%, #1a1e26 50%, #0f1218 75%); background-size: 200% 100%; animation: loading 1.5s infinite; }
-        @keyframes loading { 0% { background-position: 200% 0; } 100% { background-position: -200% 0; } }
-    </style>
-</head>
-<body class="p-6 md:p-16">
-    <div class="max-w-7xl mx-auto">
-        <header class="flex flex-col md:flex-row justify-between items-start md:items-end gap-8 mb-12">
-            <h1 class="text-5xl font-black italic uppercase leading-none">GRANDRP <span class="text-orange-500 orange-glow">FINDER</span></h1>
-            <div class="flex gap-4">
-                <div class="bg-[#0f1218] border border-orange-500/30 px-8 py-4">
-                    <span class="text-[10px] text-orange-500/60 font-bold uppercase block">Network</span>
-                    <span id="status" class="text-white font-bold uppercase italic text-sm">FAST-LINK</span>
-                </div>
-                <div class="bg-[#0f1218] border border-orange-500/30 px-8 py-4">
-                    <span class="text-[10px] text-orange-500/60 font-bold uppercase block">Souls</span>
-                    <span id="count" class="text-orange-500 font-bold text-2xl orange-glow">--</span>
-                </div>
-            </div>
-        </header>
-
-        <input type="text" id="search" placeholder="QUICK SEARCH..." class="w-full max-w-md bg-[#0f1218] border-b-2 border-orange-500/50 py-3 px-0 text-white font-bold focus:outline-none focus:border-orange-500 mb-10 text-lg uppercase tracking-widest">
-
-        <div id="player-list" class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-5 gap-3">
-            </div>
-    </div>
-
-    <script>
-        const serverId = '8rml8v';
-        const proxy = "https://api.allorigins.win/raw?url=";
-        const target = `https://servers-frontend.fivem.net/api/servers/single/${serverId}`;
+        body { 
+            background-color: #08090a; 
+            color: #f8fafc; 
+            font-family: 'Plus Jakarta Sans', sans-serif;
+            /* Ładne kafelkowe tło */
+            background-image: 
+                linear-gradient(rgba(249, 115, 22, 0.03) 1px, transparent 1px),
+                linear-gradient(90deg, rgba(249, 115, 22, 0.03) 1px, transparent 1px);
+            background-size: 40px 40px;
+            min-height: 100vh;
+        }
         
-        let allPlayers = [];
-
-        // Funkcja natychmiastowo generująca puste pola (Skeleton), żeby użytkownik nie widział pustki
-        function showSkeleton() {
-            const container = document.getElementById('player-list');
-            container.innerHTML = Array(20).fill(0).map(() => `
-                <div class="skeleton h-16 rounded-sm opacity-50"></div>
-            `).join('');
+        .card-player {
+            background: rgba(15, 17, 20, 0.8);
+            border: 1px solid rgba(255, 255, 255, 0.05);
+            backdrop-filter: blur(8px);
+            transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
         }
 
-        async function fastFetch() {
-            try {
-                // Pre-connect do proxy
-                const response = await fetch(proxy + encodeURIComponent(target));
-                const data = await response.json();
-
-                if (data?.Data?.players) {
-                    allPlayers = data.Data.players;
-                    // Zapisujemy w pamięci przeglądarki (Local Storage)
-                    localStorage.setItem('cachedPlayers', JSON.stringify(allPlayers));
-                    render(allPlayers);
-                }
-            } catch (e) {
-                console.error("Link delay...");
-            }
-        }
-
-        function render(players) {
-            document.getElementById('count').innerText = players.length;
-            const container = document.getElementById('player-list');
-            container.innerHTML = players.map(p => `
-                <div class="player-card p-4 flex justify-between items-center shadow-lg">
-                    <span class="text-2xl font-black text-white">${p.id}</span>
-                    <span class="text-[11px] font-bold text-slate-400 truncate ml-2 uppercase">${p.name}</span>
-                </div>
-            `).join('');
-        }
-
-        // MECHANIZM INSTANT:
-        // 1. Najpierw sprawdź czy mamy coś w pamięci (Cache) i pokaż to od razu
-        const cached = localStorage.getItem('cachedPlayers');
-        if (cached) {
-            allPlayers = JSON.parse(cached);
-            render(allPlayers);
-        } else {
-            showSkeleton();
-        }
-
-        // 2. W tle pobierz świeże dane
-        fastFetch();
-
-        document.getElementById('search').oninput = (e) => {
-            const term = e.target.value.toLowerCase();
-            render(allPlayers.filter(p => p.name.toLowerCase().includes(term) || p.id.toString().includes(term)));
-        };
-
-        // Odświeżaj co 30 sekund w tle
-        setInterval(fastFetch, 30000);
-    </script>
-</body>
-</html>
+        .card-player:hover {
+            border-color: #f97316;
+            background: rgba(249, 115, 22, 0.05);
+            transform: translateY(-2px);
+            box-shadow: 0 10px 30px -10px rgba(249, 115, 22, 0.
